// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button-pure accessibility should expose accessibility tree description with slotted subline 1`] = `
Object {
  "description": "Some Subline",
  "name": "Some label",
  "role": "button",
}
`;

exports[`button-pure accessibility should expose correct accessibility name if label is hidden 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;

exports[`button-pure accessibility should expose correct accessibility tree if accessibility properties are set: Initial 1`] = `
Object {
  "expanded": true,
  "haspopup": "menu",
  "name": "Some more detailed label",
  "role": "combobox",
}
`;

exports[`button-pure accessibility should expose correct accessibility tree if accessibility properties are set: Pressed 1`] = `
Object {
  "name": "Some label",
  "pressed": true,
  "role": "button",
}
`;

exports[`button-pure accessibility should expose correct initial accessibility tree properties 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;
